--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,36 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <!-- put your configurations here -->
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M3</version>
+                    <configuration>
+                        <suiteXmlFiles>
+<!--                            <suiteXmlFile>testng.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>groupsOnClass.xml</suiteXmlFile>-->
+                        </suiteXmlFiles>
+                    </configuration>
+                </plugin>
+            </plugins>
+    </build>
 
 
 
